--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,3 +21,4 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 view_experiment = "pythondaq.views.view:main"
+py_cli = "pythondaq.views.cli:cmd_group"
