--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,4 +24,4 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 view_experiment = "pythondaq.views.view:main"
-pydaq_cli = "pythondaq.views.cli:cmd_group"
+diode = "pythondaq.views.cli:cmd_group"
