--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Kevin-Veenboer <135600479+Kevin-Veenboer@users.noreply.github.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "~3.10"
 matplotlib = "^3.8.1"
 pyvisa-py = "^0.7.1"
 pyserial = "^3.5"
@@ -15,6 +15,8 @@ mkdocs = "^1.5.3"
 mkdocstrings = {extras = ["python"], version = "^0.24.0"}
 mkdocs-material = "^9.4.10"
 rich = "^13.7.0"
+pyside6 = "^6.6.0"
+pyqtgraph = "^0.13.3"
 
 
 [build-system]
